--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,8 +1,16 @@
 http{
     include         mime.types;
     default_type    application/octet-stream;
-    sever{
+    server{
         listen  80;
-        
+        server_name  localhost;
+        location / {
+            root    html;
+            index   index.html  index.htm;
+        }
+        error_page  500 502 503 504 /50x.html;
+        location    = /50x.html {
+            root    html;
+        }
     }
 }
